[package]
name = "vigil"
version = "0.2.4"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4.6.1", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
