[package]
name = "gravedigger"
version = "0.2.0"
edition = "2024"
description = "Dependency health scanner for AUR, Cargo, npm, PyPI, and Go — checks CVEs, stale dates, and hijack risk"
license = "MIT"
repository = "https://github.com/I-XXII-V/gravedigger"
readme = "README.md"
keywords = ["dependencies", "security", "aur", "cargo", "supply-chain"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4.6.1", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
